2025-03-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (corfu--minibuffer-on): Autoload this function and add
	it to `minibuffer-setup-hook'.

2025-03-14  Zhengyi Fu <i@fuzy.me>

	Do not enable Eat integration for Eshell on Windows

	* init.el <eat>: Do not enable `eat-eshell-mode' and
	`eat-eshell-visual-command-mode' on windows.

2025-03-14  Zhengyi Fu  <i@fuzy.me>

	Setup `log-edit' for `git-commit-mode'

	* init.el (+git-commit--log-edit-h): New function.  Added to
	`git-commit-setup-hook'.

2025-03-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Load gnus-diff after gnus-art.

2025-03-14  Zhengyi Fu  <i@fuzy.me>

	Add package `repeat-fu'

	* init.el (+repeat-fu--meow-mode-h): New function.  Added to
	`meow-mode-hook'.
	(repeat-fu-mode-map): New variable.  Bind C-' to
	`repeat-fu-execute'.
	(rpeat-fu-preset): Set to `meow'.
	(meow-normal-state-keymap): Bind " to `repeat-fu-execute'.

2025-03-14  Zhengyi Fu  <i@fuzy.me>

	Do not lock scratch buffers any more.  Because it causes more trouble
	than benefits.
	* init.el (get-scratch-buffer-create): Remove function.

	* init.el (git-commit-major-mode): Set to `log-edit-mode'.

	* init.el (+eshell/here, +eat/here): Commands removed.
	(tool-map) <"e", "s">: Bind to `eshell' and `eat' instead.

	* init.el (p-search): Fix loading of psx-info.

	* init.el (+custom-fonts-alist, +custom-fontset): Switch back to
	Iosevka SS04.  Inconsolata doesn't work well without cairo.

2025-03-12  Zhengyi Fu  <i@fuzy.me>

	Do not enable gpg sign by default

	* transient/values.el (magit-am, magit-cherry-pick, magit-commit)
	(magit-merge, magit-rebase): Remove values for these prefixes.

2025-03-12  Zhengyi Fu  <i@fuzy.me>

	Move persp-mode configuration to a separate file

	* init.el: Remove persp-mode configuration.
	* packages.el: Remove persp-mode.
	* site-lisp/persp-mode-config.el: New file.

2025-03-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (+vc/dir-here): Use vc-responsible-backend.